kubefiles/auth_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authfront
  labels:
    app: authfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authfront
  template:
    metadata:
      labels:
        app: authfront
    spec:
      containers:
        - image: registry.digitalocean.com/ionnier/auth:userservicefront
          imagePullPolicy: Always
          name: authfront
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: authfrontexpose
spec:
  selector:
    app: authfront
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
