kubefiles/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  labels:
    app: bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - image: registry.digitalocean.com/ionnier/auth:bff
          imagePullPolicy: Always
          name: bff
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "1028Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: bffexpose
spec:
  selector:
    app: bff
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3000
