kubefiles/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  labels:
    app: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - image: rabbitmq:3.11.8
          imagePullPolicy: Always
          name: storage
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
spec:
  selector:
    app: rabbit
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
