kubefiles/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - image: registry.digitalocean.com/ionnier/auth:storage
          imagePullPolicy: Always
          name: storage
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "1028Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /usr/aaa
              name: mydir
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mydir
          hostPath:
            # Ensure the file directory is created.
            path: /usr/aaa
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: storageexpose
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
