kubefiles/timeline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline
  labels:
    app: timeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline
  template:
    metadata:
      labels:
        app: timeline
    spec:
      containers:
        - image: registry.digitalocean.com/ionnier/auth:timeline
          imagePullPolicy: Always
          name: timeline
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "1028Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /mnt/db
              name: mydbdir
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mydbdir
          hostPath:
            path: /usr/db
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: timelineexpose
spec:
  selector:
    app: timeline
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3000
