kubefiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresscontroller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header Authorization $http_authorization;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ionnier.live
    secretName: sslcertificate
  rules:
    - host: ionnier.live
      http:
        paths:
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: bffexpose
                port:
                  number: 3003
          - path: /api/signup
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /api/updateSelf
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /api/self
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /api/updatePassword
            pathType: Prefix
            backend:
              service:
                name: authexpose
                port:
                  number: 3000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: authfrontexpose
                port:
                  number: 8080
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: authfrontexpose
                port:
                  number: 8080
          - path: /storage/
            pathType: Prefix
            backend:
              service:
                name: storageexpose
                port:
                  number: 3001
          - path: /timeline/
            pathType: Prefix
            backend:
              service:
                name: timelineexpose
                port:
                  number: 3002
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
               name: acme-challenge
               port:
                number: 80
          - path: /suggest
            pathType: Prefix
            backend:
              service:
               name: suggestsrvexpose
               port:
                number: 3006
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authfrontexpose
                port:
                  number: 8080
# If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:

#   apiVersion: v1
#   kind: Secret
#   metadata:
#     name: example-tls
#     namespace: foo
#   data:
#     tls.crt: <base64 encoded cert>
#     tls.key: <base64 encoded key>
#   type: kubernetes.io/tls
